--- a/Assets/MackySoft/MackySoft.Navigathena/package.json
+++ b/Assets/MackySoft/MackySoft.Navigathena/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "com.mackysoft.navigathena",
+	"name": "com.hyoga-fukuno.navigathena",
 	"displayName": "Navigathena",
 	"author": { "name": "MackySoft", "url": "https://github.com/mackysoft" },
 	"version": "1.1.0",
